[package]
name = "mastodon_prom_exporter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.1", features = ["derive"] }
eyre = "0.6.8"
lazy_static = "1.4.0"
prometheus = "0.13.3"
reqwest = { version = "0.11.13", features = ["json"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
tokio = { version = "1.24.1", features = [ "rt", "rt-multi-thread", "macros", "tokio-macros" ] }
warp = "0.3.3"
